# agentauth

./: .dockerignore  .gitignore  Dockerfile  LICENSE  README.md  docker-compose.yml  package.json  pnpm-lock.yaml  redocly.yaml  tsconfig.base.json
.changeset/: config.json  core-timing-enhancements.md  docs-cli-protecting.md  docs-site.md  go-challenge-engine.md  go-server-middleware.md  go-ts-parity.md  hono-middleware.md  nestjs-adapter.md  new-canary-types.md  phase-3-4-pomi-timing.md  phase-5-client-cli.md  phase-6-ecosystem.md  phase-7-rust-python.md  phase-8-react-edge.md  production-stores-and-fixes.md  python-challenge-engine.md  python-server-middleware.md  python-ts-parity.md  rust-challenge-engine.md  rust-server-middleware.md  rust-ts-parity.md
.github/workflows/: changeset-check.yml  ci-go.yml  ci-python.yml  ci-rust.yml  ci.yml  release-go.yml  release-python.yml  release-rust.yml  release.yml
apps/web/: CHANGELOG.md  index.html  package.json  vercel.json
apps/web/src/: app.tsx  index.css  main.tsx
docker/: .env.example  Dockerfile  docker-compose.postgres.yml  docker-compose.yml  entrypoint.mjs  init.sql  package.json
examples/express-api/: .env.example  README.md  package.json  server.ts  tsconfig.json
examples/fastapi/: README.md  requirements.txt  server.py
examples/langchain-agent/: .env.example  README.md  agent.py  requirements.txt
examples/nextjs-app/: .env.example  README.md  next.config.ts  package.json
examples/nextjs-app/app/: layout.tsx  page.tsx
sdks/go/: README.md  client.go  client_test.go  crypto.go  crypto_test.go  engine.go  engine_test.go  errors.go  go.mod  guard.go  guard_test.go  headers.go  headers_test.go  middleware.go  middleware_test.go  registry.go  registry_test.go  token.go  token_test.go  types.go
sdks/go/challenges/: ambiguous_logic.go  ambiguous_logic_test.go  code_execution.go  code_execution_test.go  crypto_nl.go  crypto_nl_test.go  multi_step.go  multi_step_test.go
sdks/go/ginauth/: ginauth.go  ginauth_test.go  go.mod
sdks/go/pomi/: catalog.go  catalog_test.go  classifier.go  (+5 more)
sdks/python/: README.md  pyproject.toml
sdks/python/src/agentauth/: __init__.py  client.py  crypto.py  errors.py
sdks/python/src/agentauth/integrations/: crewai.py  langchain.py
sdks/python/src/xagentauth/: __init__.py  client.py  crypto.py  engine.py  guard.py  headers.py  registry.py  token.py  types.py
sdks/python/src/xagentauth/challenges/: __init__.py  ambiguous_logic.py  code_execution.py  crypto_nl.py  multi_step.py
sdks/python/src/xagentauth/integrations/: crewai.py  langchain.py
sdks/python/src/xagentauth/middleware/: __init__.py  fastapi.py  flask.py
sdks/python/src/xagentauth/pomi/: __init__.py  catalog.py  classifier.py  extractor.py  injector.py
sdks/python/src/xagentauth/stores/: __init__.py  memory.py
sdks/python/src/xagentauth/timing/: __init__.py  analyzer.py  baselines.py  session_tracker.py
sdks/python/tests/: test_ambiguous_logic.py  test_catalog.py  test_classifier.py  test_client.py  test_code_execution.py  test_crewai.py  test_crypto.py  test_crypto_nl.py  test_crypto_utils.py  test_engine.py  test_extractor.py  test_fastapi.py  test_flask.py  test_guard.py  test_headers.py  test_injector.py  test_langchain.py  test_multi_step.py  test_registry.py  test_session_tracker.py  test_stores.py  test_timing.py  test_timing_pattern.py  test_token.py
sdks/rust/: Cargo.toml  README.md  build-wasm.sh
sdks/rust/src/: client.rs  crypto.rs  engine.rs  error.rs  guard.rs  headers.rs  lib.rs  registry.rs  token.rs  types.rs  wasm.rs
sdks/rust/src/challenges/: ambiguous_logic.rs  code_execution.rs  crypto_nl.rs  mod.rs  multi_step.rs
sdks/rust/src/middleware/: actix.rs  axum.rs
sdks/rust/src/pomi/: catalog.rs  classifier.rs  extractor.rs  injector.rs  mod.rs
sdks/rust/src/stores/: memory.rs
sdks/rust/src/timing/: analyzer.rs  baselines.rs  mod.rs  session_tracker.rs
sdks/rust/tests/: actix_test.rs  axum_test.rs  client_test.rs  crypto_test.rs
spec/: openapi.yaml
(+33 files in other folders)
