[package]
name = "xagentauth"
version = "0.1.0"
edition = "2021"
description = "AgentAuth client SDK for Rust — authenticate AI agents"
license = "MIT"
repository = "https://github.com/dyshay/agentauth"
keywords = ["ai", "authentication", "agent", "jwt"]

[lib]
crate-type = ["cdylib", "rlib"]

[features]
default = []
axum = ["dep:axum", "dep:axum-core", "dep:tower", "dep:tower-layer", "dep:http", "dep:tower-service", "dep:pin-project-lite"]
actix = ["dep:actix-web", "dep:actix-service", "dep:actix-utils"]

[dependencies]
serde = { version = "1", features = ["derive"] }
serde_json = "1"
hmac = "0.12"
sha2 = "0.10"
hex = "0.4"
thiserror = "2"
jsonwebtoken = "9"

# Axum feature deps
axum = { version = "0.8", optional = true }
axum-core = { version = "0.5", optional = true }
tower = { version = "0.5", optional = true, features = ["util"] }
tower-layer = { version = "0.3", optional = true }
tower-service = { version = "0.3", optional = true }
http = { version = "1", optional = true }
pin-project-lite = { version = "0.2", optional = true }

# Actix feature deps
actix-web = { version = "4", optional = true }
actix-service = { version = "2", optional = true }
actix-utils = { version = "3", optional = true }

[target.'cfg(not(target_arch = "wasm32"))'.dependencies]
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }

[target.'cfg(target_arch = "wasm32")'.dependencies]
reqwest = { version = "0.12", features = ["json"], default-features = false }
wasm-bindgen = "0.2"
wasm-bindgen-futures = "0.4"
js-sys = "0.3"
serde-wasm-bindgen = "0.6"

[dev-dependencies]
tokio = { version = "1", features = ["rt-multi-thread", "macros"] }
wiremock = "0.6"
axum = "0.8"
axum-core = "0.5"
tower = { version = "0.5", features = ["util"] }
tower-layer = "0.3"
tower-service = "0.3"
http = "1"
pin-project-lite = "0.2"
actix-web = "4"
actix-rt = "2"
actix-service = "2"
actix-utils = "3"
hyper = { version = "1", features = ["full"] }
http-body-util = "0.1"
